content html file

--- a/dicegame.html
+++ b/dicegame.html
@@ -13,6 +13,28 @@
   <title>Dice Game</title>
 </head>
 <body>
+<main>
+  <section class="player1" id="player1">
+    <h2 class="name1" id="name1">Player1</h2>
+    <p class="score1" id="score1">12</p>
+    <div class="round1">
+      <p class="roundname1" id="roundname1">Round</p>
+      <p class="roundscore1" id="roundscore1">0</p>
+    </div> 
+  </section>
+  <section class="player2" id="player2">
+    <h2 class="name2" id="name2">Player2</h2>
+    <p class="score2" id="score2">45</p>
+    <div class="round2">
+      <p class="roundname2" id="roundname2">Round</p>
+      <p class="roundscore2" id="roundscore2">0</p>
+    </div> 
+  </section>
+  <img src="dice-5.png" alt="dice play" class="dice">
+  <button class="btn btnnew">New Game</button>
+  <button class="btn btnroll">Roll</button>
+  <button class="btn btnhold">Hold</button>
+</main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" 
   integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
