--- a/dicegame.html
+++ b/dicegame.html
@@ -14,20 +14,20 @@
 </head>
 <body>
 <main>
-  <section class="player1" id="player1">
-    <h2 class="name1" id="name1">Player1</h2>
-    <p class="score1" id="score1">12</p>
-    <div class="round1">
-      <p class="roundname1" id="roundname1">Round</p>
-      <p class="roundscore1" id="roundscore1">0</p>
+  <section class="player player1 player1-active" id="player1">
+    <h2 class="name" id="name1">Player1</h2>
+    <p class="score" id="score1">12</p>
+    <div class="round">
+      <p class="roundname" id="roundname1">Round</p>
+      <p class="roundscore" id="roundscore1">0</p>
     </div> 
   </section>
-  <section class="player2" id="player2">
-    <h2 class="name2" id="name2">Player2</h2>
-    <p class="score2" id="score2">45</p>
-    <div class="round2">
-      <p class="roundname2" id="roundname2">Round</p>
-      <p class="roundscore2" id="roundscore2">0</p>
+  <section class="player player2" id="player2">
+    <h2 class="name" id="name2">Player2</h2>
+    <p class="score" id="score2">45</p>
+    <div class="round">
+      <p class="roundname" id="roundname2">Round</p>
+      <p class="roundscore" id="roundscore2">0</p>
     </div> 
   </section>
   <img src="dice-5.png" alt="dice play" class="dice">
