--- a/dicegame.html
+++ b/dicegame.html
@@ -5,36 +5,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
- integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
- <link rel="stylesheet" href="dicegame.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="dicegame.css">
   <title>Dice Game</title>
 </head>
 <body>
-<main>
-  <section class="player player1 player1-active" id="player1">
-    <h2 class="name" id="name1">Player1</h2>
-    <p class="score" id="score1">12</p>
-    <div class="round">
-      <p class="roundname" id="roundname1">Round</p>
-      <p class="roundscore" id="roundscore1">0</p>
-    </div> 
-  </section>
-  <section class="player player2" id="player2">
-    <h2 class="name" id="name2">Player2</h2>
-    <p class="score" id="score2">45</p>
-    <div class="round">
-      <p class="roundname" id="roundname2">Round</p>
-      <p class="roundscore" id="roundscore2">0</p>
-    </div> 
-  </section>
-  <img src="dice-5.png" alt="dice play" class="dice">
-  <button class="btn btnnew">New Game</button>
-  <button class="btn btnroll">Roll</button>
-  <button class="btn btnhold">Hold</button>
-</main>
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <section class="player player1 player1-active" id="player1">
+            <div class="text-center">
+              <h2 class="name" id="name1">Player1</h2>
+              <p class="score" id="score1">12</p>
+            </div>
+            <div class="text-center mt-4">
+              <div class="round">
+                <p class="roundname" id="roundname1">Round</p>
+                <p class="roundscore" id="roundscore1">0</p>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="col-md-6">
+          <section class="player player2" id="player2">
+            <div class="text-center">
+              <h2 class="name" id="name2">Player2</h2>
+              <p class="score" id="score2">45</p>
+            </div>
+            <div class="text-center mt-4">
+              <div class="round">
+                <p class="roundname" id="roundname2">Round</p>
+                <p class="roundscore" id="roundscore2">0</p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center mt-4">
+      <img src="dice-5.png" alt="dice play" class="dice">
+
+      <button class="btn btnnew">New Game</button>
+      <button class="btn btnroll">Roll</button>
+      <button class="btn btnhold">Hold</button>
+    </div>
+
+  </main>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" 
   integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
